# FilamentTracker

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
backend/src/domain/: error.rs  filament.rs  mod.rs
backend/src/domain/services/: filament_service.rs  mod.rs
backend/src/infrastructure/repositories/: memory.rs
backend/tests/: filament_tests.rs  repository_tests.rs  service_tests.rs
frontend/: eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  start-dev-server.sh  stop-dev-server.sh  tailwind.config.js  vite.config.js
frontend/.storybook/: main.ts
frontend/src/: App.svelte
frontend/src/components/: DarkModeToggle.svelte  FilamentCard.svelte
